[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/ui/hud.gd" id="1"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 420.0
offset_bottom = 248.0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HPTextLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.88, 0.88, 1)
theme_override_font_sizes/font_size = 16
text = "PLAYER HP"

[node name="HPBar" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(360, 30)
max_value = 100.0
value = 100.0
show_percentage = true

[node name="StaminaTextLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.88, 1, 0.9, 1)
theme_override_font_sizes/font_size = 15
text = "STAMINA"

[node name="StaminaBar" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(360, 24)
max_value = 100.0
value = 100.0
show_percentage = true

[node name="EstusLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "EST: 3/3"

[node name="FloorLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Floor: 1/10"

[node name="FloorDescLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "COMBAT | -"

[node name="RunLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.9, 0.4, 1)
text = ""

[node name="ThreatLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.72, 0.45, 1)
text = "Threat: -"

[node name="SessionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.82, 0.95, 1, 1)
text = "Session: runs 0 | reach 0.0% | clear 0.0% | boss_fail_streak 0"

[node name="RewardTagLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.76, 0.9, 1, 1)
text = "Build: (none)"

[node name="StateLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "State: IDLE"

[node name="RewardPanel" type="PanelContainer" parent="."]
visible = false
anchors_preset = 10
anchor_left = 0.5
anchor_top = 0.2
anchor_right = 0.5
anchor_bottom = 0.2
offset_left = -350.0
offset_top = 0.0
offset_right = 350.0
offset_bottom = 224.0
grow_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="RewardPanel"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="RewardTitleLabel" type="Label" parent="RewardPanel/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
theme_override_colors/font_color = Color(1, 0.95, 0.5, 1)
text = "報酬選択"

[node name="RewardHintLabel" type="Label" parent="RewardPanel/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
text = "1/2/3キーで選択"

[node name="RewardOption1" type="Label" parent="RewardPanel/VBoxContainer"]
layout_mode = 2
text = "[1] ---"

[node name="RewardOption2" type="Label" parent="RewardPanel/VBoxContainer"]
layout_mode = 2
text = "[2] ---"

[node name="RewardOption3" type="Label" parent="RewardPanel/VBoxContainer"]
layout_mode = 2
text = "[3] ---"

[node name="RewardButtons" type="HBoxContainer" parent="RewardPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="Pick1Button" type="Button" parent="RewardPanel/VBoxContainer/RewardButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "選択 1"

[node name="Pick2Button" type="Button" parent="RewardPanel/VBoxContainer/RewardButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "選択 2"

[node name="Pick3Button" type="Button" parent="RewardPanel/VBoxContainer/RewardButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "選択 3"

[node name="DebugContainer" type="MarginContainer" parent="."]
anchors_preset = 9
anchor_bottom = 1.0
anchor_right = 1.0
anchor_top = 0.6
offset_left = 16.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 0

[node name="DebugLabel" type="Label" parent="DebugContainer"]
layout_mode = 2
vertical_alignment = 2
text = ""

[node name="KeymapContainer" type="MarginContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -60.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 8

[node name="KeymapLabel" type="Label" parent="KeymapContainer"]
layout_mode = 2
horizontal_alignment = 1
text = "Keyboard: WASD/J/K/L/H/1/2  |  Gamepad: LS/A/B/X/Y  |  Mobile: 左スティック+右ボタン  |  Reward: 1/2/3 or TAP  |  T:TouchUI  R:Retry"
